[package]
name = "naphtha-proc-macro"
version = "0.4.1"
authors = ["Lewin Probst <info@emirror.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Supporting macro crate for naphtha"
homepage = "https://github.com/emirror-de/naphtha"
documentation = "https://github.com/emirror-de/naphtha"
repository = "https://github.com/emirror-de/naphtha"
readme = "README.md"
keywords = ["database", "models", "connection", "migration"]
categories = ["database"]

[lib]
proc-macro = true

[features]
default = []
full = ["sqlite", "mysql", "pg", "barrel-full"]
barrel-full = ["barrel-sqlite", "barrel-mysql", "barrel-pg"]
sqlite = []
mysql = []
pg = []
barrel-sqlite = []
barrel-mysql = []
barrel-pg = []

[dependencies]
syn = { version = "1.0.86", features = ["parsing"] }
proc-macro2 = "1.0.36"
quote = "1.0.15"
